kubernetes/kubernetes-sandbox/discovery-lb/sample-clusterip-multi.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-clusterip-multi
spec:
  type: ClusterIP
  ports:
    - name: "http-port"
      protocol: "TCP"
      port: 8080
      targetPort: 80
    - name:
      protocol: "TCP"
      port: 8443
      targetPort: 443
  selector:
    app: sample-app
