kubernetes/kubernetes-sandbox/discovery-lb/sample-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-cluster
spec:
  type: ClusterIP
  ports:
    - name: "http-port"
      protocol: "TCP"
      port: 8080
      targetPort: 80
  selector:
    app: sample-app
