kubernetes/kubernetes-sandbox/discovery-lb/sample-externalip.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-exptenalip
spec:
  type: ClusterIP
  externalIPs:
    - 10.240.0.7
    - 10.240.0.8
  ports:
    - name: "http-port"
      protocol: "TCP"
      port: 8080
      targetPort: 80
  selector:
    app: sample-app
