kubernetes/kubernetes-sandbox/discovery-lb/sample-nodeport-fail.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-nodeport-fail
spec:
  type: NodePort
  ports:
    - name: "http-port"
      protocol: "TCP"
      port: 8080
      targetPort: 80
      nodePort: 8888 # 多くのKubernetes環境では3000〜32767が指定可能
  selector:
    app: sample-app
